# axx

./: .gitignore  Cargo.toml  Vagrantfile  network-config.sample.yaml  package-lock.json  sample_request.http
data/: deployment_config.py  install_sqlx-cli.txt  ssh_config.py
myaxum/server/: Cargo.toml  Makefile  config.sample.toml  http-client.env.json  sample_request.http
myaxum/server/migrations/: 20230626150456_init.sql
myaxum/server/src/: api.rs  handlers.rs  main.rs  todo.rs
myaxum/server/src/auth/: mod.rs
myaxum/vite-project/: vite.config.ts
src/: main.rs
src/auth/: mod.rs
static/: style.css
vite-project/: .env.sample  index.html  package-lock.json  package.json  vite.config.ts
vite-project/src/: App.vue  main.ts  style.less
vite-project/src/components/: HelloWorld.vue  TodoList.vue  UserList.vue
