[package]
name = "ax"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18" }
hyper = { version = "0.14.26", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
