[package]
name = "ax"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
config = "0.15"
hyper = { version = "1.6", features = ["full"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.44", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = {version = "0.20", features = ["derive"]}
sqlx = { version = "0.8" , features = ["runtime-tokio-rustls", "any", "postgres"]}
dotenv = "0.15"
